<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="cancel_photo">Cancel</string>
    <string name="add_photo">Add Photo!</string>
    <string name="app_version_name">1.0</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_filter">Filter</string>
    <string name="action_alarm">Alarm</string>
    <string name="image_desc">Image</string>
    <string name="text_team">Team</string>
    <string name="text_stadium">Stadium: %1$s</string>
    <string name="text_timeline">Timeline</string>
    <string name="text_lineups">Lineups</string>
    <string name="text_chatroom">Chat</string>
    <string name="text_stats">Stats</string>
    <string name="text_p">MP</string>
    <string name="text_played">Played</string>
    <string name="text_w">W</string>
    <string name="text_win">Win</string>
    <string name="text_d">D</string>
    <string name="text_draw">Draw</string>
    <string name="text_l">L</string>
    <string name="text_lose">Lose</string>
    <string name="text_gd">GD</string>
    <string name="text_goal_difference">Goal Diff</string>
    <string name="text_pts">P</string>
    <string name="text_point">Point</string>
    <string name="text_news">News</string>
    <string name="text_title_rank">#</string>
    <string name="text_title_player">PLAYER</string>
    <string name="text_title_score">SCORE</string>
    <string name="text_reminder_on_time">On time</string>
    <string name="text_reminder_15">15 minutes before</string>
    <string name="text_reminder_30">30 minutes before</string>
    <string name="text_reminder_60">60 minutes before</string>
    <string name="text_btn_ok">OK</string>
    <string name="text_btn_change">Update</string>
    <string name="text_btn_view">View</string>
    <string name="text_btn_cancel">Cancel</string>
    <string name="text_btn_language">Languages</string>
    <string name="text_btn_more_apps">More apps</string>
    <string name="text_btn_about">About us</string>
    <string name="text_goal">G</string>
    <string name="text_yellow_card">YC</string>
    <string name="text_red_card">RC</string>
    <string name="text_penalty">Pen</string>
    <string name="text_own_goal">O.G</string>
    <string name="text_in">In</string>
    <string name="text_out">Out</string>
    <string name="text_view_detail">View detail</string>
    <string name="text_no_events">No Event</string>
    <string name="text_remider_15">Alarm 15 minutes before the match</string>
    <string name="text_remider_30">Alarm 30 minutes before the match</string>
    <string name="text_remider_60">Alarm 60 minutes before the match</string>
    <string name="text_remider_on_time">Alarm on time</string>
    <string name="text_club">CLUB</string>
    <string name="text_club_information">Club\'s information</string>
    <string name="text_established">Established: %1$s</string>
    <string name="text_manager">Manager: %1$s</string>
    <string name="text_nickname">Nick Name: %1$s</string>
    <string name="text_auto_refresh">Auto refresh match detail</string>
    <string name="text_auto_refresh_after_minute">Auto refresh after %1$s minutes</string>
    <string name="text_getNotification">Get Notification</string>
    <string name="text_all">All</string>
    <string name="text_round">Round</string>
    <string name="text_after">after</string>
    <string name="text_minutes">minutes</string>
    <string name="text_exit_app">Exit Application</string>
    <string name="text_confirm_exit">Do you want to exit?</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="action_settings">Settings</string>
    <string name="text_rank">Table</string>
    <string name="text_schedule">Schedule</string>
    <string name="text_top_scorers">Top Scorers</string>
    <string name="text_settings">Settings</string>
    <string name="text_turn_on_fav_teams">Turn on Alert with your favourite teams</string>
    <string name="copy_right">Copyright © 2016 - Leagues is powered by</string>
    <string name="homepage">Home page:</string>
    <string name="app_version">Version:</string>
    <string name="close_matches">Close Matches</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="two_days_ago">2 days ago</string>
    <string name="three_days_ago">3 days ago</string>
    <string name="no_data">No data found</string>
    <string name="msg_using_offline_data">Network is not available. The data is offline</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="odds">Odds</string>
    <string name="detail">Detail</string>
    <string name="view"><u>View</u></string>

    <string name="select_fav_teams">Select your teams</string>
    <string name="deselect_all">Deselect all</string>
    <string name="no_network">No network</string>
    <string name="live">Live</string>
    <string name="final_text">Finish</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="italian">Italian</string>

    <!--This for chat-->
    <string name="previous_view">View previous chat</string>
    <string name="write_comment">Write comment here</string>
    <string name="change_name">Change Username</string>
    <string name="create_name">Username</string>
    <string name="dash_board">Dashboard</string>
    <string name="no_timeline_avaiable">Data not updated yet</string>
    <string name="notification_on_off">On/Off notification</string>
    <string name="saved">Saved</string>
    <string name="ordinarily">PS</string>
    <string name="teams">TEAMS</string>
    <string name="player">Player</string>
    <string name="score">Score</string>
    <string name="data_not_avaiable">Data not found</string>
    <string name="finish">Finish</string>
    <string name="mp">MP</string>
    <string name="alert">Alert</string>
    <string name="demo_message">This league is currently locked because you are using the DEMO version. Only the first 2 leagues: English Championship  &amp; French Ligue 2 are active. Buy our source code and apifootball data feed key today to unlock all leagues.</string>
    <string name="no_match_found">No match found</string>


    <!---By Huy-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

</resources>