<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_gr_reminder"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/padding_vertical_large"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/chk_reminder_on_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_reminder_on_time"
            android:textSize="@dimen/text_size_normal" />

        <CheckBox
            android:id="@+id/chk_reminder_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_reminder_15"
            android:textSize="@dimen/text_size_normal" />

        <CheckBox
            android:id="@+id/chk_reminder_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_reminder_30"
            android:textSize="@dimen/text_size_normal" />

        <CheckBox
            android:id="@+id/chk_reminder_60"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_reminder_60"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_gr_reminder"
        android:layout_marginTop="@dimen/margin_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reminder_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_btn_cancel"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_reminder_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_btn_ok"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

</RelativeLayout>