<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.hcpt.multileagues.widget.textview.TextViewOpenSansRegular
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_vertical"
        android:text="@string/change_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_title" />


    <EditText
        android:id="@+id/edtRename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_vertical"
        android:layout_marginRight="@dimen/padding_vertical"
        android:padding="7dp"
        android:singleLine="true" />


    <LinearLayout
        android:gravity="right"
        android:layout_gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_vertical"
        android:paddingRight="@dimen/padding_vertical">

        <com.hcpt.multileagues.widget.textview.TextViewOpenSansBold
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/text_btn_cancel"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_large" />


        <com.hcpt.multileagues.widget.textview.TextViewOpenSansBold
            android:layout_gravity="right"
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/text_btn_change"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_large" />


    </LinearLayout>

</LinearLayout>