<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_layout"
        android:layout_marginRight="@dimen/margin_layout"
        android:layout_marginTop="@dimen/margin_layout"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="false"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardBackgroundColor="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/span8"
                    android:orientation="horizontal">

                    <com.hcpt.multileagues.widget.textview.TextViewRobotoRegular
                        android:layout_width="@dimen/span32"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/ordinarily"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/text_size_normal" />

                    <com.hcpt.multileagues.widget.textview.TextViewRobotoRegular
                        android:layout_width="@dimen/span50"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/teams"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/font_size_body"
                        android:visibility="invisible" />

                    <com.hcpt.multileagues.widget.textview.TextViewRobotoRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/span10"
                        android:layout_weight="1"
                        android:text="@string/player"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/text_size_normal" />

                    <com.hcpt.multileagues.widget.textview.TextViewRobotoRegular
                        android:layout_width="@dimen/span64"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/score"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/text_size_normal" />
                    <com.hcpt.multileagues.widget.textview.TextViewRobotoRegular
                        android:layout_width="@dimen/span64"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="Assits"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/text_size_normal" />

                </LinearLayout>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginBottom="@dimen/span10"
                    android:layout_marginTop="@dimen/span8"
                    android:background="@color/divider" />

                <!--<android.support.v7.widget.RecyclerView-->
                    <!--android:id="@+id/rcvTopScorer"-->
                    <!--android:layout_width="fill_parent"-->
                    <!--android:layout_height="fill_parent">-->
                <!--</android.support.v7.widget.RecyclerView>-->
                <ListView
                    android:id="@+id/rcvTopScorer"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                </ListView>

            </LinearLayout>

            <com.hcpt.multileagues.widget.textview.TextViewRobotoRegular
                android:id="@+id/txtNoDataTopScorer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/data_not_avaiable"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/font_size_body"
                android:visibility="invisible" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/layout_adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    </LinearLayout>
</LinearLayout>